<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="tip_amazing_20">Amazing (20%)</string>
    <string name="tip_good_18">Good (18%)</string>
    <string name="tip_okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount %s</string>
</resources>