<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".MainActivity">

        <ImageView
                android:id="@+id/service_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cost_of_service"
                app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
                app:srcCompat="@drawable/ic_store" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_of_service"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/cost_of_service"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/service_icon">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_service_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:id="@+id/service_question_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_question"
                app:layout_constraintBottom_toBottomOf="@id/service_question"
                app:srcCompat="@drawable/ic_service" />


        <TextView
                android:id="@+id/service_question"
                android:text="@string/how_was_the_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/cost_of_service"
                app:layout_constraintTop_toBottomOf="@id/cost_of_service"
                style="@style/Widget.TipTime.TextView"/>

        <RadioGroup
                android:id="@+id/tip_options"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/tip_amazing_20"
                app:layout_constraintTop_toBottomOf="@id/service_question"
                app:layout_constraintStart_toStartOf="@id/service_question">

            <RadioButton
                    android:text="@string/tip_amazing_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tip_amazing_20"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"/>

            <RadioButton
                    android:text="@string/tip_good_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tip_good_18"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"/>

            <RadioButton
                    android:text="@string/tip_okay_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tip_okay_15"
                    style="@style/Widget.TipTime.CompoundButton.RadioButton"/>
        </RadioGroup>

        <ImageView
                android:id="@+id/round_up_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_round_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/round_up_switch"
                app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
                android:text="@string/round_up_tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/round_up_switch"
                android:checked="true"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/round_up_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_options"
                style="@style/Widget.TipTime.CompoundButton.Switch"/>

        <Button
                android:text="@string/calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/calculate_button"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch"
                app:layout_constraintStart_toStartOf="@id/round_up_switch"
                app:layout_constraintEnd_toEndOf="parent" />

        <TextView
                tools:text="Tip Amount: $10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip_result"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"
                style="@style/Widget.TipTime.TextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>